todo-api-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: todo-api-svc
  labels:
    app: todo-api
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: todo-api
